--- a/Xamarin.Socket.IO/packages/repositories.config
+++ b/Xamarin.Socket.IO/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="../Socket.IO.iOS/packages.config" />
   <repository path="../Socket.IO.Test/packages.config" />
   <repository path="../Xamarin.Socket.IO/packages.config" />
 </repositories>
