--- a/Xamarin.Socket.IO/Xamarin.Socket.IO/Xamarin.Socket.IO.csproj
+++ b/Xamarin.Socket.IO/Xamarin.Socket.IO/Xamarin.Socket.IO.csproj
@@ -34,8 +34,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SocketIO.cs" />
-    <Compile Include="Manager.cs" />
     <Compile Include="PCLTimer.cs" />
+    <Compile Include="MessageBroker.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
