clean up and move Message to its own file

--- a/Xamarin.Socket.IO/Xamarin.Socket.IO/Xamarin.Socket.IO.csproj
+++ b/Xamarin.Socket.IO/Xamarin.Socket.IO/Xamarin.Socket.IO.csproj
@@ -34,7 +34,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SocketIO.cs" />
-    <Compile Include="MessageBroker.cs" />
+    <Compile Include="Message.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
