--- a/Xamarin.Socket.IO/Xamarin.Socket.IO/Xamarin.Socket.IO.csproj
+++ b/Xamarin.Socket.IO/Xamarin.Socket.IO/Xamarin.Socket.IO.csproj
@@ -35,6 +35,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SocketIO.cs" />
     <Compile Include="Message.cs" />
+    <Compile Include="MessageID.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
