--- a/Xamarin.Socket.IO/Socket.IO.Test/Socket.IO.Test.csproj
+++ b/Xamarin.Socket.IO/Socket.IO.Test/Socket.IO.Test.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-    <ProductVersion>10.0.0</ProductVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{B83CE55C-EE35-4CB4-B32C-827F2EEAC22C}</ProjectGuid>
     <ProjectTypeGuids>{6BC8ED88-2882-458C-8E55-DFD12B67127B};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -93,6 +93,11 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.1\lib\portable-net40+sl5+wp80+win8+monotouch+monoandroid\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net" />
+    <Reference Include="WebSocket4Net.MonoTouch">
+      <HintPath>..\lib\WebSocket4Net.MonoTouch.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
@@ -114,11 +119,6 @@
     <InterfaceDefinition Include="MainStoryboard_iPhone.storyboard" />
     <InterfaceDefinition Include="MainStoryboard_iPad.storyboard" />
   </ItemGroup>
+  <Import Project="..\Xamarin.Socket.IO\Xamarin.Socket.IO.projitems" Label="Shared" Condition="Exists('..\Xamarin.Socket.IO\Xamarin.Socket.IO.projitems')" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <ProjectReference Include="..\Xamarin.Socket.IO\Xamarin.Socket.IO.csproj">
-      <Project>{282EB56C-E471-4565-B130-AC9B99196301}</Project>
-      <Name>Xamarin.Socket.IO</Name>
-    </ProjectReference>
-  </ItemGroup>
 </Project>
